Added new schema files. To the repository

--- a/MoviesWebAPI.Common/MoviesWebAPI.Common.csproj
+++ b/MoviesWebAPI.Common/MoviesWebAPI.Common.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="SQL Schema Files\InsertQuery.sql" />
+    <None Remove="SQL Schema Files\MovieDBSchema.sql" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="10.1.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="FluentValidation" Version="10.3.3" />
